--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 			<input type="url"name="" id="portfolio" required/>
 			<br/>
 			<label for ="favColor">Select your favorite color:</label>
-			<input id="favColor" type="color" name="favcolor" value="ff8fff0"/>
+			<input id="favColor" type="color" name="favcolor" value="ff0000"/>
 			<br/>
 			<label for="likeness">Likeness</label>
 			<input type="range" min="1" max="100" id="likeness"/>
