--- a/main.html
+++ b/main.html
@@ -11,18 +11,19 @@
    <h1>Feedback Form</h1>
 	<form method ="Post">
 		<label for ="name">Name</label>
-		<input type="text"name="" id ="name" minlength="3" maxlength="50" required />
-		<br/>
+		<input type="text" id ="name" minlength="3" maxlength="50" required />
+		<br />
 		<lable for="portfolio">Portfolio</label>
-			<input type="url"name="" id="portfolio" required/>
-			<br/>
+			<input type="url" id="portfolio" required/>
+			<br />
 			<label for ="favColor">Select your favorite color:</label>
-			<input id="favColor" type="color" name="favcolor" value="ff0000"/>
-			<br/>
+			<input id="favColor" type="color" value="ff0000"/>
+			<br />
 			<label for="likeness">Likeness</label>
-			<input type="range" min="1" max="100" id="likeness"/>
-			<br/>
+			<input type="range" id="likeness"min="1" max="100" />
+			<br />
 			<button type ="submit">Submit</button>
+			<br />
 			<button type="reset">Reset Form</button>
 	</form>
 	<script type="text/javascript" src="./script.js">
