--- a/main.html
+++ b/main.html
@@ -8,15 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-   <h1>Feedback Form</h1>
-	<form method ="Post">
+  	<form method ="Post">
+	<h1>Feedback Form</h1>
 		<label for ="name">Name</label>
 		<input type="text" id ="name" minlength="3" maxlength="50" required />
 		<br />
-		<lable for="portfolio">Portfolio</label>
+		<label for="portfolio">Portfolio</label>
 			<input type="url" id="portfolio" required/>
 			<br />
-			<label for ="favColor">Select your favorite color:</label>
+			<label for ="favColor">Select your favorite color</label>
 			<input id="favColor" type="color" value="ff0000"/>
 			<br />
 			<label for="likeness">Likeness</label>
