--- a/main.html
+++ b/main.html
@@ -17,10 +17,14 @@
 			<input type="url" id="portfolio" required/>
 			<br />
 			<label for ="favColor">Select your favorite color</label>
-			<input id="favColor" type="color" value="ff0000"/>
-			<br />
+			<select id="favColor">
+				<option value="blue">Blue</option>
+				<option value="red">Red</option>
+				<option value="green">Green</option>
+				<option value="yellow">Yellow</option>
+			</select>
 			<label for="likeness">Likeness</label>
-			<input type="range" id="likeness"min="1" max="100" />
+			<input type="range" id="likeness" minlength="1" maxlength="100" />
 			<br />
 			<button type ="submit">Submit</button>
 			<button type="reset">Reset Form</button>
