--- a/main.html
+++ b/main.html
@@ -11,10 +11,10 @@
   	<form method ="Post">
 	<h1>Feedback Form</h1>
 		<label for ="name">Name</label>
-		<input type="text" id ="name" minlength="3" maxlength="50" required />
+		<input type="text" id ="name" minlength="3" maxlength="50">
 		<br />
 		<label for="portfolio">Portfolio</label>
-			<input type="url" id="portfolio" required/>
+			<input type="url" id="portfolio">
 			<br />
 			<label for ="favColor">Select your favorite color</label>
 			<select id="favColor">
