--- a/main.html
+++ b/main.html
@@ -12,10 +12,10 @@
 	<h1>Feedback Form</h1>
 		<label for ="name">Name</label>
 		<input type="text" id ="name" minlength="3" maxlength="50">
-		<br />
+		<br>
 		<label for="portfolio">Portfolio</label>
 			<input type="url" id="portfolio">
-			<br />
+			<br>
 			<label for ="favColor">Select your favorite color</label>
 			<select id="favColor">
 				<option value="blue">Blue</option>
@@ -23,11 +23,11 @@
 				<option value="green">Green</option>
 				<option value="yellow">Yellow</option>
 			</select>
-		<br/>
+		<br>
 			<label for="likeness">Likeness</label>
 			<input type="range" id="likeness" minlength="1" maxlength="100" />
-			<br />
-			<button type ="submit">Submit</button>
+			<br>
+			<input type ="submit" value ="submit"
 	</form>
 	<script type="text/javascript" src="./script.js">
 </script>
