--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
 			<label for="likeness">Likeness</label>
 			<input type="range" id="likeness" minlength="1" maxlength="100" />
 			<br>
-			<input type ="submit" value ="submit"
+			<input type ="submit" value ="submit">
 	</form>
 	<script type="text/javascript" src="./script.js">
 </script>
