--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 <body>
 	<!-- the entire body must be written by student -->
   	<form method ="Post">
-	<h1>Feedback Form</h1>
+	<h2>Feedback Form</h2>
 		<label for ="name">Name</label>
 		<input type="text" id ="name" minlength="3" maxlength="50">
 		<br>
 		<label for="portfolio">Portfolio</label>
 			<input type="url" id="portfolio">
 			<br>
-			<label for ="favColor">Select your favorite color</label>
+			<label for ="favColor">Favcolor</label>
 			<select id="favColor">
 				<option value="blue">Blue</option>
 				<option value="red">Red</option>
