--- a/main.html
+++ b/main.html
@@ -17,12 +17,8 @@
 			<input type="url" id="portfolio">
 			<br>
 			<label for ="favColor">Favcolor</label>
-			<select id="favColor">
-				<option value="blue">Blue</option>
-				<option value="red">Red</option>
-				<option value="green">Green</option>
-				<option value="yellow">Yellow</option>
-			</select>
+			<input type="Color" id ="favColor">
+			
 		<br>
 			<label for="likeness">Likeness</label>
 			<input type="range" id="likeness" minlength="1" maxlength="100" />
