--- a/main.html
+++ b/main.html
@@ -8,24 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-  	<form method ="Post">
-	<h1>Feedback Form</h1>
-		<label for ="name">Name</label>
-		<input type="text" id ="name" minlength="3" maxlength="50">
+	<form method="post">
+		<h1> Feedback Form</h1>
+		<label for="name">Name</label>
+		<input type="text" id="name" minlength="3" maxlength="50">
 		<br>
 		<label for="portfolio">Portfolio</label>
-			<input type="url" id="portfolio">
-			<br>
-			<label for ="favColor">Favcolor</label>
-			<input type="Color" id ="favColor">
-			
+		<input type="url" id="portfolio">
 		<br>
-			<label for="likeness">Likeness</label>
-			<input type="range" id="likeness" minlength="1" maxlength="100" />
-			<br>
-			<input type ="submit" value ="submit">
-	</form>
-	<script type="text/javascript" src="./script.js">
+		<label for="favColor">FavColor</label>
+		<input type="color" id="favColor">
+<!-- 			< value="red">Red</option>
+			<option value="blue">Blue</option>
+			<option value="green">Green</option>
+			<option value="yellow">Yellow</option> -->
+	
+		<label for="likeness">Likeness</label>
+	<input type="range" id="likeness" min="1" max="100" >
+		<br>
+		<input type="submit" value="submit">
+		</form>
+    <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
